k8s/oke/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quarkus-ms
  namespace: quarkus-ms
  labels:
    app: quarkus-ms
spec:
  type: ClusterIP
  selector:
    app: quarkus-ms
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
